--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ p
     padding: 5px;
     border-radius: 5px;
     margin-top: 20px !important;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
 }
 
 #sorter h2 
@@ -112,12 +112,52 @@ p
 
 #details
 {
-    margin-bottom: 20px;
+    text-align: center;
+    margin-top: 50px !important;
 }
 
-#footer
+#category_name
 {
-    display: inline;
-    padding: 20px;
-    font-weight: bold;
+    margin-left: 10px !important;
+    width: 200px !important;
+    margin-top: 20px !important;
+}
+
+#full_article_date
+{
+    margin-top: 10px;
+}
+
+.navbar-brand
+{
+    margin-left: 15px !important;
+}
+
+#create_category
+{
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+}
+
+#new_category_name, #new_category_label
+{
+    margin-left: 10px;
+}
+
+#categories
+{
+    margin: auto;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#categories button
+{
+    margin-right: 3px;
+    margin-left: 3px;
+}
+
+#full_article_category
+{
+    pointer-events: none;
 }
