--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ p
 #articles
 {
     border-style: solid;
-    width: 40%;
+    width: 30% !important;
     border-radius: 10px;
     margin: auto;
     margin-bottom: 10px;
@@ -215,3 +215,9 @@ p
 {
     margin-top: 20px !important;
 }
+
+#article_image
+{
+    margin-bottom: 30px;
+}
+
